--- a/sources/index.html
+++ b/sources/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="На этой странице представлены источники, использованные при создании сайта.">
     <meta name="author" content="Дмитрий Кутузов, z1431">
     <link rel="icon" href="../assets/logo.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <header>
@@ -46,4 +47,16 @@
         </div>
     </footer>
 </body>
+<style>
+    nav {
+        position: sticky;
+        top: 0;
+        background-color: white;
+        z-index: 1000;
+    }
+    .nav-links {
+        display: flex;
+        justify-content: space-around;
+    }
+</style>
 </html>
