--- a/sources/index.html
+++ b/sources/index.html
@@ -12,8 +12,8 @@
     <header>
         <h1 class="brand">
             <div>
-                <svg width="200" height="200">
-                    <image width="200" height="200" href="../assets/logo.svg"></image>
+                <svg width="150" height="150">
+                    <image width="150" height="150" href="../assets/logo.svg"></image>
                 </svg>
             </div>
             <div><span>Электронные карты</span></div>
@@ -57,6 +57,11 @@
     .nav-links {
         display: flex;
         justify-content: space-around;
+    }
+    .brand {
+        display: flex;
+        justify-content: left;
+        align-items: center;
     }
 </style>
 </html>
