--- a/html4/index.html
+++ b/html4/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Электронные карты</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description"
         content="Эта страница создана в стиле HTML4. При её создании не использовались семантические теги.">
