--- a/html5/index.html
+++ b/html5/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Электронные карты</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Эта страница создана с применением семантических тегов из HTML5.">
     <meta name="author" content="Дмитрий Кутузов, z1431">
     <link rel="icon" href="../assets/logo.svg" type="image/svg+xml">
