--- a/sources/index.html
+++ b/sources/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Электронные карты</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="На этой странице представлены источники, использованные при создании сайта.">
     <meta name="author" content="Дмитрий Кутузов, z1431">
     <link rel="icon" href="../assets/logo.svg" type="image/svg+xml">
