--- a/html4/index.html
+++ b/html4/index.html
@@ -344,12 +344,14 @@
     .nav-links {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
     }
 
     .brand {
         display: flex;
         justify-content: left;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     .article-image {
