--- a/sources/index.html
+++ b/sources/index.html
@@ -58,11 +58,13 @@
     .nav-links {
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
     }
     .brand {
         display: flex;
         justify-content: left;
         align-items: center;
+        flex-wrap: wrap;
     }
 </style>
 </html>
