--- a/sources/index.html
+++ b/sources/index.html
@@ -25,7 +25,7 @@
         <hr>
         <div class="nav-links">
             <span><a href="../html4/index.html">HTML4 Страница</a></span>
-            <span><a href="../html5/index.html">HTML5 Страница</a></span>
+            <span><a href="../html5/index.php">HTML5 Страница</a></span>
             <span><a href="../sources/index.html">Источники</a></span>
         </div>
         <hr>
